fix css overflow of table

--- a/src/components/table/Table.scss
+++ b/src/components/table/Table.scss
@@ -1,7 +1,7 @@
 @use "../../themes/variables" as *;
 @use "../../themes/colors" as *;
 
-.Product__table {
+.DataTable {
   .product-image {
     padding: 6px 6px;
     img {
@@ -69,7 +69,13 @@
     display: none;
   }
   .MuiDataGrid-virtualScrollerContent {
-    min-height: 1320px;
+    // max-height: calc(100vh - $navbar-height - 300px);
+    min-height: 350px;
+    height: fit-content !important;
+
+    .MuiDataGrid-virtualScrollerRenderZone {
+      position: relative;
+    }
   }
 }
 
